# mcpeek

./: .env.example  .gitignore  README.md  action.yml  railway.toml
backend/: Dockerfile  pyproject.toml  railway.json  requirements.txt
backend/app/: __main__.py  config.py  database.py  main.py  schemas.py
backend/app/detection/: __init__.py  patterns.py  utils.py
backend/app/models/: __init__.py  database.py  scan.py
backend/app/parser/: manifest.py  metadata.py
backend/app/risk_engine/: scorer.py
backend/app/routers/: scan.py
backend/app/runtime_scan/: __init__.py  external.py  fetch_analyzer.py  trust_analyzer.py
backend/app/schemas/: __init__.py  scan.py
backend/app/services/: advanced_injection.py  ai_analyzer.py  ast_analyzer.py  content_hash.py  dependency_risk.py  external_analyzer.py  mcp_scanner.py  package_scanner.py  report_generator.py  risk_scorer.py  scan_cache.py  scanner.py  secret_detector.py  skill_scanner.py  skillcloak_detector.py  tool_poison_detector.py  url_safety.py
backend/app/static_scan/: __init__.py  __main__.py  external.py  injection.py  parser.py  scanner.py  shell.py
backend/app/trust_scan/: supply_chain.py
backend/tests/: test_ai_analyzer.py  test_patterns.py  test_risk_scorer.py  test_skillcloak.py  test_tool_poison.py  test_url_safety.py
docs/: HACKATHON_DEMO.md  PRODUCTION.md
examples/: prompt-injection-skill.md  safe-mcp.json  secret-leak-config.json  vulnerable-agent-skill.md  vulnerable-mcp-curl-shell.json
frontend/: next.config.ts  package-lock.json  package.json  tsconfig.tsbuildinfo
(+38 files in other folders)
